--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "",
-  "main": "App.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "repository": {
     "type": "git",
